[package]
name = "earth"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["jpeg"] }
image = { version = "0.24.0", default-features = false }
fastrand = "1.8.0"
bevy-inspector-egui = "0.18.0"
bevytest = { path = "../bevytest" }

[dev-dependencies]
#bevytest = { path = "../bevytest" }

[features]
# TODO: Consider "forest" if the natural environment is only forest.
nature = []
ocean = []
city = []
default = ["nature", "ocean", "city"]

